Working On FieldVisit OUT form
Working On FieldVisit OUT form

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -3899,10 +3899,10 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hw9-4Q-oum">
                                                 <rect key="frame" x="14" y="67" width="324" height="50"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Select Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoD-2f-GUq">
-                                                        <rect key="frame" x="8" y="8" width="316" height="40"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=" Select Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoD-2f-GUq">
+                                                        <rect key="frame" x="6" y="8" width="318" height="40"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhb-UV-loJ">
@@ -3916,10 +3916,10 @@
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="vhb-UV-loJ" secondAttribute="trailing" constant="13" id="NEs-kX-Lcq"/>
-                                                    <constraint firstItem="NoD-2f-GUq" firstAttribute="leading" secondItem="hw9-4Q-oum" secondAttribute="leading" constant="8" id="P1r-dY-rA2"/>
+                                                    <constraint firstItem="NoD-2f-GUq" firstAttribute="leading" secondItem="hw9-4Q-oum" secondAttribute="leading" constant="6" id="P1r-dY-rA2"/>
                                                     <constraint firstAttribute="bottom" secondItem="vhb-UV-loJ" secondAttribute="bottom" constant="17" id="TaP-vK-U4B"/>
                                                     <constraint firstItem="NoD-2f-GUq" firstAttribute="top" secondItem="hw9-4Q-oum" secondAttribute="top" constant="8" id="U8Q-QQ-WkC"/>
-                                                    <constraint firstAttribute="trailing" secondItem="NoD-2f-GUq" secondAttribute="trailing" id="UXd-0x-ZFA"/>
+                                                    <constraint firstAttribute="trailing" secondItem="NoD-2f-GUq" secondAttribute="trailing" constant="2" id="UXd-0x-ZFA"/>
                                                     <constraint firstItem="vhb-UV-loJ" firstAttribute="top" secondItem="hw9-4Q-oum" secondAttribute="top" constant="13" id="cCm-3i-nCZ"/>
                                                     <constraint firstAttribute="height" constant="50" id="cDE-BV-jZR"/>
                                                     <constraint firstAttribute="bottom" secondItem="NoD-2f-GUq" secondAttribute="bottom" constant="2" id="hru-Od-RZV"/>
@@ -3929,14 +3929,14 @@
                                                 <rect key="frame" x="14" y="125" width="324" height="50"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Client Place" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A92-9t-XJ8">
-                                                        <rect key="frame" x="9" y="5" width="305" height="40"/>
+                                                        <rect key="frame" x="6" y="5" width="308" height="40"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstItem="A92-9t-XJ8" firstAttribute="leading" secondItem="EJB-Tu-smO" secondAttribute="leading" constant="9" id="UOt-nT-etG"/>
+                                                    <constraint firstItem="A92-9t-XJ8" firstAttribute="leading" secondItem="EJB-Tu-smO" secondAttribute="leading" constant="6" id="UOt-nT-etG"/>
                                                     <constraint firstItem="A92-9t-XJ8" firstAttribute="top" secondItem="EJB-Tu-smO" secondAttribute="top" constant="5" id="g5F-pG-OUP"/>
                                                     <constraint firstAttribute="trailing" secondItem="A92-9t-XJ8" secondAttribute="trailing" constant="10" id="iet-K5-FwS"/>
                                                     <constraint firstAttribute="bottom" secondItem="A92-9t-XJ8" secondAttribute="bottom" constant="5" id="wZD-aH-794"/>
@@ -3961,7 +3961,7 @@
                                                 </constraints>
                                             </view>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Visit Purpose" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-CM-KpB">
-                                                <rect key="frame" x="23" y="228" width="315" height="40"/>
+                                                <rect key="frame" x="20" y="228" width="318" height="40"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="IZ2-ta-Nba"/>
@@ -3987,7 +3987,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9Ef-7V-Dcv">
-                                                <rect key="frame" x="18" y="314" width="320" height="65"/>
+                                                <rect key="frame" x="16" y="314" width="322" height="65"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="65" id="y4P-aT-VZP"/>
@@ -4008,10 +4008,17 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="paP-fN-Ms7">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nrc-2U-rJW">
                                                         <rect key="frame" x="0.0" y="30" width="324" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="B87-53-q1p"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Previous Meeting" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="paP-fN-Ms7">
+                                                        <rect key="frame" x="6" y="30" width="318" height="40"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
@@ -4020,8 +4027,11 @@
                                                     <constraint firstAttribute="trailing" secondItem="C1y-Zo-6Js" secondAttribute="trailing" id="4V1-WL-wdQ"/>
                                                     <constraint firstAttribute="bottom" secondItem="paP-fN-Ms7" secondAttribute="bottom" constant="5" id="ASV-0E-giD"/>
                                                     <constraint firstItem="C1y-Zo-6Js" firstAttribute="leading" secondItem="OaT-TW-lRf" secondAttribute="leading" id="BEw-iO-vbM"/>
+                                                    <constraint firstItem="Nrc-2U-rJW" firstAttribute="leading" secondItem="OaT-TW-lRf" secondAttribute="leading" id="BPE-6A-5Ga"/>
+                                                    <constraint firstItem="Nrc-2U-rJW" firstAttribute="top" secondItem="C1y-Zo-6Js" secondAttribute="bottom" id="LwR-5V-YQ9"/>
                                                     <constraint firstAttribute="height" constant="75" id="QOh-HL-GgS"/>
-                                                    <constraint firstItem="paP-fN-Ms7" firstAttribute="leading" secondItem="OaT-TW-lRf" secondAttribute="leading" id="aaK-yH-9fM"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Nrc-2U-rJW" secondAttribute="trailing" id="XVu-hX-xSN"/>
+                                                    <constraint firstItem="paP-fN-Ms7" firstAttribute="leading" secondItem="OaT-TW-lRf" secondAttribute="leading" constant="6" id="aaK-yH-9fM"/>
                                                     <constraint firstItem="paP-fN-Ms7" firstAttribute="top" secondItem="C1y-Zo-6Js" secondAttribute="bottom" id="kaj-Kk-zEu"/>
                                                     <constraint firstAttribute="trailing" secondItem="paP-fN-Ms7" secondAttribute="trailing" id="p75-rb-oWS"/>
                                                     <constraint firstItem="C1y-Zo-6Js" firstAttribute="top" secondItem="OaT-TW-lRf" secondAttribute="top" id="wrP-wL-e4o"/>
@@ -4065,7 +4075,7 @@
                                             <constraint firstAttribute="trailing" secondItem="EJB-Tu-smO" secondAttribute="trailing" constant="14" id="3sV-sj-0bc"/>
                                             <constraint firstItem="vRs-Jl-fnW" firstAttribute="top" secondItem="hw9-4Q-oum" secondAttribute="bottom" constant="8" id="5yP-cX-V1r"/>
                                             <constraint firstItem="EJB-Tu-smO" firstAttribute="top" secondItem="hw9-4Q-oum" secondAttribute="bottom" constant="8" id="8hW-vS-k3d"/>
-                                            <constraint firstItem="9Ef-7V-Dcv" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="18" id="9G8-bY-Ea0"/>
+                                            <constraint firstItem="9Ef-7V-Dcv" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="16" id="9G8-bY-Ea0"/>
                                             <constraint firstAttribute="trailing" secondItem="hw9-4Q-oum" secondAttribute="trailing" constant="14" id="9j7-h7-gNa"/>
                                             <constraint firstItem="EJB-Tu-smO" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="14" id="Amu-fG-crD"/>
                                             <constraint firstItem="FZs-Ws-XFL" firstAttribute="top" secondItem="Kke-74-XX8" secondAttribute="bottom" constant="3" id="C82-4D-rwK"/>
@@ -4081,7 +4091,7 @@
                                             <constraint firstItem="FZs-Ws-XFL" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="14" id="fRO-5d-YIY"/>
                                             <constraint firstItem="hw9-4Q-oum" firstAttribute="top" secondItem="upk-39-zIv" secondAttribute="bottom" constant="8" id="fda-rB-IRg"/>
                                             <constraint firstItem="OaT-TW-lRf" firstAttribute="top" secondItem="vRs-Jl-fnW" secondAttribute="bottom" constant="37" id="geo-YE-pzV"/>
-                                            <constraint firstItem="Yig-CM-KpB" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="23" id="h3A-IH-h2m"/>
+                                            <constraint firstItem="Yig-CM-KpB" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="20" id="h3A-IH-h2m"/>
                                             <constraint firstItem="vRs-Jl-fnW" firstAttribute="leading" secondItem="cdP-2e-TnE" secondAttribute="leading" constant="14" id="hNP-r9-bTK"/>
                                             <constraint firstItem="OaT-TW-lRf" firstAttribute="top" secondItem="9Ef-7V-Dcv" secondAttribute="bottom" constant="8" id="hZd-u3-c64"/>
                                             <constraint firstAttribute="trailing" secondItem="FZs-Ws-XFL" secondAttribute="trailing" constant="14" id="hdF-st-O8V"/>
