Working On Fieldvisit Form alignment text
Working On Fieldvisit Form alignment text

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -3899,7 +3899,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hw9-4Q-oum">
                                                 <rect key="frame" x="14" y="67" width="324" height="50"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=" Select Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoD-2f-GUq">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Select Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoD-2f-GUq">
                                                         <rect key="frame" x="6" y="8" width="318" height="40"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -3919,7 +3919,7 @@
                                                     <constraint firstItem="NoD-2f-GUq" firstAttribute="leading" secondItem="hw9-4Q-oum" secondAttribute="leading" constant="6" id="P1r-dY-rA2"/>
                                                     <constraint firstAttribute="bottom" secondItem="vhb-UV-loJ" secondAttribute="bottom" constant="17" id="TaP-vK-U4B"/>
                                                     <constraint firstItem="NoD-2f-GUq" firstAttribute="top" secondItem="hw9-4Q-oum" secondAttribute="top" constant="8" id="U8Q-QQ-WkC"/>
-                                                    <constraint firstAttribute="trailing" secondItem="NoD-2f-GUq" secondAttribute="trailing" constant="2" id="UXd-0x-ZFA"/>
+                                                    <constraint firstAttribute="trailing" secondItem="NoD-2f-GUq" secondAttribute="trailing" id="UXd-0x-ZFA"/>
                                                     <constraint firstItem="vhb-UV-loJ" firstAttribute="top" secondItem="hw9-4Q-oum" secondAttribute="top" constant="13" id="cCm-3i-nCZ"/>
                                                     <constraint firstAttribute="height" constant="50" id="cDE-BV-jZR"/>
                                                     <constraint firstAttribute="bottom" secondItem="NoD-2f-GUq" secondAttribute="bottom" constant="2" id="hru-Od-RZV"/>
